[project]
name = "ai-videogames-assistant"
version = "1.0.0"
description = "AI Video Games Assistant powered by Google ADK"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["googleapiclient", "google", "streamlit", "fastapi", "uvicorn", "dotenv", "arize", "openinference"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
